perf(entities): introduce LazyReceivedMessage, Bag collections, and cache tuning